# tech_notification_v2

./: Cargo.toml  README.md
src/: main.rs
src/application/: base.rs  mod.rs  usecase.rs
src/application/domain/model/: item.rs
src/application/port/: article_port.rs  mod.rs  notification_port.rs
src/application/usecase/: random_recommend_usecase.rs
src/infrastructure/: line_notification_repository.rs  mod.rs  qiita_article_repository.rs  zenn_article_repository.rs
tests/: line_notification_repository_test.rs  qiita_article_repository_test.rs  zenn_article_repository_test.rs
