[package]
name = "tech_notification_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
lambda_runtime = "0.14.3"
serde = "1"
tokio = { version = "1", features = ["macros"] }
async-trait = "0.1"
reqwest = { version = "0.12.22", features = ["json", "tokio-runtime"] }
log = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }
serde = { version = "1.0", features = ["derive"] }