[package]
name = "tech_notification_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
lambda_runtime = "0.14.3"
tokio = { version = "1.47.1", features = ["macros"] }
reqwest = { version = "0.12.22", features = ["json"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.100"
trait-variant = "0.1.2"
