[package]
name = "tech_notification_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
lambda_runtime = "0.14.4"
tokio = { version = "1.48.0", features = ["macros"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
trait-variant = "0.1.2"
rand = "0.9.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"